Refactored market identifier codes into separate properties file
Issue: #3373